tests/files/type_checker_tests/should_fail/201.cmdr
//Should fail write if not using strings
write "hi" to 3;
